[tool.poetry]
name = "rp"
version = "0.1.0"
description = ""
authors = ["lachlan.fitzgibbon@icloud.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
llvmlite = ">=0.39.1"
numpy = ">=1.18,<1.24"
scipy = ">=1.10.1"
matplotlib = ">=3.7.1"
jupyter = ">=1.0.0"
scikit-learn = "^1.2.2"
numba = ">=0.56.4"
librosa = ">=0.10.0.post2"
torch = ">=2.0.0"
transformers = ">=4.27.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
